no Nan in T profiles if source term is small. Nan appear for q around 1e-5.  Test in multi layer with same K at interface seems OK except pb at downward limit. Problem not identified. Gelman-Rubin bug stiil there

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -35,8 +35,8 @@
     "NBCHAINS = 10\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITERMCMC = 100\n",
-    "NBBURNING = 100\n",
+    "NBITERMCMC = 35\n",
+    "NBBURNING = 20\n",
     "DEBUGRUB = 2. # Gelman Rubin criteria\n",
     "NBCELLS = 40"
    ]
@@ -421,6 +421,8 @@
    "outputs": [],
    "source": [
     "Zinterface = 0.2\n",
+    "EPS = 1e-15\n",
+    "\n",
     "\n",
     "Couche_1 = {\n",
     "    \"name\": \"Couche 1\",\n",
@@ -429,17 +431,17 @@
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 1e-5\n",
+    "    \"q\": EPS\n",
     "}\n",
     "\n",
     "Couche_2 = {\n",
     "    \"name\": \"Couche 2\",\n",
     "    \"zLow\": Zbottom,\n",
-    "    \"moinslog10IntrinK\": 15,\n",
+    "    \"moinslog10IntrinK\": 11,\n",
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 1e-5\n",
+    "    \"q\": EPS\n",
     "}\n",
     "\n",
     "Layer1 = Layer.from_dict(Couche_1)\n",
@@ -494,12 +496,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dilat = 10\n",
+    "step = dilat*10\n",
+    "\n",
+    "\n",
     "priors_couche_1 = {\n",
     "    \"Prior_moinslog10IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((1e-12,1e-4), 1e-10)\n",
+    "   # \"Prior_q\": ((1e-12,1e-4), 1e-10)\n",
+    "    \"Prior_q\": ((EPS/dilat,dilat*EPS), EPS/step)\n",
     "}\n",
     "\n",
     "priors_couche_2 = {\n",
@@ -507,7 +514,8 @@
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((1e-12,1e-4), 1e-10)\n",
+    "   # \"Prior_q\": ((1e-12,1e-4), 1e-10)\n",
+    "    \"Prior_q\": ((EPS/dilat,dilat*EPS), EPS/step)\n",
     "}\n",
     "\n",
     "Layer1.set_priors_from_dict(priors_couche_1)\n",
@@ -550,46 +558,6 @@
     "col.plot_all_results()\n",
     "col.plot_darcy_flow_quantile()\n",
     "col.plot_quantile_temperatures_sensors()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Options : Récupération d'autres paramètres\n",
-    "Voici les un exemple de paramètres qui, normalement, sont bons :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Box qui ne sert à rien, il faudrait mettre à jour la colonne avec les paramètres suivant puis lancer un modèle direct pour comparer les résultats. \n",
-    "\n",
-    "Couche_1 = {\n",
-    "    \"name\": \"Couche 1\",\n",
-    "    \"zLow\": 0.2,\n",
-    "    \"moinslog10IntrinK\": 7.915378861204348,\n",
-    "    \"n\": 0.1310721719612464,\n",
-    "    \"lambda_s\": 5.602951622531522,\n",
-    "    \"rhos_cs\": 4758163.582292321,\n",
-    "    \"q\": 1e-5\n",
-    "}\n",
-    "\n",
-    "Couche_2 = {\n",
-    "    \"name\": \"Couche 2\",\n",
-    "    \"zLow\": 0.4,\n",
-    "    \"moinslog10IntrinK\": 6.574103692603533,\n",
-    "    \"n\": 0.029547616319484868,\n",
-    "    \"lambda_s\": 3.944439207155854,\n",
-    "    \"rhos_cs\": 4931216.13398901,\n",
-    "    \"q\": 1e-5\n",
-    "}\n",
-    "\n",
-    "Layer1 = Layer.from_dict(Couche_1)\n",
-    "Layer2 = Layer.from_dict(Couche_2)  "
    ]
   },
   {
