--- a/pyheatmy/frequentiel_real_data.ipynb
+++ b/pyheatmy/frequentiel_real_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "a56086d6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "4439c196",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "a129b1a4",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "7435a0ed",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "22460603",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4          River_Bed                0.155"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "f8dce410",
    "metadata": {},
    "outputs": [],
@@ -222,10 +222,10 @@
     "contenuDossierPoint = os.listdir(dico['chemin'])\n",
     "for x in contenuDossierPoint:\n",
     "    # la pression\n",
-    "    if x==\"point035_P_measures.csv\":\n",
+    "    if x==\"point35_pression_cleaned.csv\":\n",
     "        dico['pression'] = read_csv(dico['chemin'] + '/' + x)\n",
     "    # la température\n",
-    "    if x.startswith('t') and x.endswith('.csv'):\n",
+    "    if x==\"point35_temperature_cleaned.csv\":\n",
     "        dico['temperature'] = read_csv(dico['chemin'] + '/' + x)\n",
     "with open(path_config + dico['capteur'].upper() + '.csv') as fichier:\n",
     "    lignes = fichier.readlines()\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "9da340f5",
    "metadata": {},
    "outputs": [
@@ -257,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Colonnes température: ['dates', 'temperature_depth_1_C', 'temperature_depth_2_C', 'temperature_depth_3_C', 'temperature_depth_4_C']\n",
-      "Colonnes pression: ['dates', 'tension_V', 'temperature_stream_C']\n"
+      "Colonnes température: ['dates', 'Temp_profondeur_10', 'Temp_profondeur_20', 'Temp_profondeur_30', 'Temp_profondeur_40']\n",
+      "Colonnes pression: ['dates', 'temperature_stream', 'dH']\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "4c891052",
    "metadata": {},
    "outputs": [],
@@ -338,19 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "85525161",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('<M8[ns]')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Cannot convert dates: No known formats match your data!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mconvertDates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdico\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtemperature\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m convertDates(dico[\u001b[33m'\u001b[39m\u001b[33mpression\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      3\u001b[39m dico[\u001b[33m'\u001b[39m\u001b[33mtemperature\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mdates\u001b[39m\u001b[33m'\u001b[39m].dtype\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 47\u001b[39m, in \u001b[36mconvertDates\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m     44\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# None of the known format are valid\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mCannot convert dates: No known formats match your data!\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Cannot convert dates: No known formats match your data!"
+     ]
     }
    ],
    "source": [
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "abcab81b",
    "metadata": {},
    "outputs": [],
@@ -389,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a3028cdf",
    "metadata": {},
    "outputs": [
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e540d66a",
    "metadata": {},
    "outputs": [],
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3efc880f",
    "metadata": {},
    "outputs": [
