--- a/pyheatmy/research/adim_2025_bis.ipynb
+++ b/pyheatmy/research/adim_2025_bis.ipynb
@@ -69,7 +69,7 @@
     "\\kappa = \\frac{\\rho_w c_w k g \\Delta H}{\\mu_w \\lambda_m} \\quad ; \\quad \\beta = \\frac{\\rho_m c_m h^2}{\\lambda_m P }  \\quad ; \\quad  \\gamma = \\frac{\\mu_w h^2 S_s}{k \\rho_w g P} \\quad ; \\quad \\zeta = \\dfrac{h^2 q_{l}}{K \\Delta H}\n",
     "$$\n",
     "\n",
-    "IMPORTANT: Cette analyse montre que les profils de température et de charge dépendant uniquement de ces trois paramètres $\\kappa$, $\\beta$, $\\gamma$ et $\\zeta$. Il est donc possible (sauf cas particulier) de déterminer ces quatre paramètres si on nous donne un profil.\n",
+    "IMPORTANT: Cette analyse montre que les profils de température et de charge dépendant uniquement de ces quatre paramètres $\\kappa$, $\\beta$, $\\gamma$ et $\\zeta$. Il est donc possible (sauf cas particulier) de déterminer ces quatre paramètres si on nous donne un profil.\n",
     "\n",
     "Le problème initial contient lui plus de paramètres: $n$, $k$, $S_s$, $\\lambda_m$, $\\rho$ et $c$. Il est impossible de remonter à tout ces paramètres. C'est facile à voir pour $\\rho$ et $c$: en effet, dans les équations, seul le produit $\\rho c$ appraît il est donc impossible de remonter indépendamment à $\\rho$ et $c$.\n",
     "Le fait que le profils ne dépende que du quadriplet ($\\kappa$, $\\beta$, $\\gamma$, $\\zeta$) nous montre qu'il est impossible de remonter au 6-uplet ($n$, $k$, $S_s$, $\\lambda_m$, $\\rho$, $c$). En effet plusieurs 6-uplets sont équivalent acr ils donnent le même quadriplet ($\\kappa$, $\\beta$, $\\gamma$, $\\zeta$). Il y a donc une infinité de solutions, exactes, au problème d'inversion."
@@ -173,7 +173,95 @@
      "languageId": "plaintext"
     }
    },
-   "source": []
+   "source": [
+    "## 2. Discrétisation de l'équation de la température ($\\tilde{\\theta}$)\n",
+    "\n",
+    "La méthode de discrétisation est identique à la précédente. La principale différence réside dans la présence d'un terme d'advection qui couple la température au gradient de charge hydraulique.\n",
+    "\n",
+    "### 2.1. Rappel de l'équation adimensionnelle\n",
+    "\n",
+    "L'équation à résoudre est la suivante :\n",
+    "$$\n",
+    "\\beta \\cdot \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{t}} = \\kappa \\cdot \\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}} \\cdot \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}} + \\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2}\n",
+    "$$\n",
+    "\n",
+    "### 2.2. Approximation des dérivées\n",
+    "\n",
+    "Nous utilisons les mêmes approximations par différences finies que précédemment, en ajoutant celle de la dérivée première pour la température :\n",
+    "\n",
+    "- **Dérivée temporelle (ordre 1) :**\n",
+    "  $$\n",
+    "  \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{t}} \\approx \\frac{\\tilde{\\theta}_k^{j+1} - \\tilde{\\theta}_k^j}{\\Delta\\tilde{t}}\n",
+    "  $$\n",
+    "- **Dérivée spatiale (ordre 1, centrée) :**\n",
+    "  $$\n",
+    "  \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}} \\approx \\frac{\\tilde{\\theta}_{k+1} - \\tilde{\\theta}_{k-1}}{2\\Delta\\tilde{z}}\n",
+    "  $$\n",
+    "- **Dérivée spatiale (ordre 2, centrée) :**\n",
+    "  $$\n",
+    "  \\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2} \\approx \\frac{\\tilde{\\theta}_{k+1} - 2\\tilde{\\theta}_k + \\tilde{\\theta}_{k-1}}{(\\Delta\\tilde{z})^2}\n",
+    "  $$\n",
+    "\n",
+    "Le terme de gradient de charge, $\\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}}$, est considéré comme **connu**. En effet, dans le schéma de résolution, on calcule d'abord $\\vec{\\tilde{H}}^{j+1}$ sur tout le domaine, puis on s'en sert pour calculer $\\vec{\\tilde{\\theta}}^{j+1}$. Nous noterons ce gradient connu : $G_k^{j+1} = \\left(\\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}}\\right)_k^{j+1}$.\n",
+    "\n",
+    "### 2.3. Schéma implicite et réorganisation matricielle\n",
+    "\n",
+    "En appliquant un schéma totalement implicite ($\\alpha=1$, comme dans `pyheatmy`), tous les termes spatiaux sont évalués au temps futur $j+1$.\n",
+    "\n",
+    "L'équation discrétisée complète est :\n",
+    "$$\n",
+    "\\beta_k \\frac{\\tilde{\\theta}_k^{j+1} - \\tilde{\\theta}_k^j}{\\Delta\\tilde{t}} = \\kappa_k \\cdot G_k^{j+1} \\cdot \\left( \\frac{\\tilde{\\theta}_{k+1}^{j+1} - \\tilde{\\theta}_{k-1}^{j+1}}{2\\Delta\\tilde{z}} \\right) + \\left( \\frac{\\tilde{\\theta}_{k+1}^{j+1} - 2\\tilde{\\theta}_k^{j+1} + \\tilde{\\theta}_{k-1}^{j+1}}{(\\Delta\\tilde{z})^2} \\right)\n",
+    "$$\n",
+    "\n",
+    "Nous regroupons à nouveau les termes inconnus ($\\tilde{\\theta}^{j+1}$) à gauche et les termes connus ($\\tilde{\\theta}^{j}$) à droite.\n",
+    "\n",
+    "**Termes à gauche (inconnus en $j+1$) :**\n",
+    "$$\n",
+    "\\underbrace{\\left(-\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k-1} \\tilde{\\theta}_{k-1}^{j+1} + \\underbrace{\\left(\\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k} \\tilde{\\theta}_{k}^{j+1} + \\underbrace{\\left(\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k+1} \\tilde{\\theta}_{k+1}^{j+1}\n",
+    "$$\n",
+    "\n",
+    "**Termes à droite (connus en $j$) :**\n",
+    "$$\n",
+    "\\frac{\\beta_k}{\\Delta\\tilde{t}} \\tilde{\\theta}_{k}^{j}\n",
+    "$$\n",
+    "\n",
+    "On en déduit les coefficients de la matrice $A_{\\tilde{\\theta}}$. La matrice $B_{\\tilde{\\theta}}$ est cette fois-ci simplement une matrice diagonale.\n",
+    "\n",
+    "#### Coefficients de la matrice A (implicite, associée à $\\vec{\\tilde{\\theta}}^{j+1}$)\n",
+    "- **Diagonale principale ($A_{k,k}$):**\n",
+    "  $$\n",
+    "  \\text{diag}(A)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2}{(\\Delta\\tilde{z})^2}\n",
+    "  $$\n",
+    "- **Diagonale inférieure ($A_{k,k-1}$):**\n",
+    "  $$\n",
+    "  \\text{sub}(A)_k = -\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\n",
+    "  $$\n",
+    "- **Diagonale supérieure ($A_{k,k+1}$):**\n",
+    "  $$\n",
+    "  \\text{sup}(A)_k = \\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\n",
+    "  $$\n",
+    "\n",
+    "**Note importante :** À cause du terme d'advection, la diagonale inférieure et la diagonale supérieure ne sont pas égales. La matrice $A_{\\tilde{\\theta}}$ est donc **asymétrique**, contrairement à la matrice $A_{\\tilde{H}}$ de la diffusion pure.\n",
+    "\n",
+    "#### Coefficients de la matrice B (explicite, associée à $\\vec{\\tilde{\\theta}}^{j}$)\n",
+    "- **Diagonale principale ($B_{k,k}$):**\n",
+    "  $$\n",
+    "  \\text{diag}(B)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}}\n",
+    "  $$\n",
+    "- **Diagonales inférieure et supérieure :** $0$\n",
+    "<br></br>\n",
+    "<br></br>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<br></br>\n",
+    "\n",
+    "## 3. Conclusion de l'analyse\n",
+    "\n",
+    "Nous avons maintenant le \"plan de montage\" théorique complet pour les matrices des deux équations. Nous savons exactement quels coefficients placer sur les trois diagonales principales de nos matrices A et B pour chaque problème.\n",
+    "\n",
+    "Nous sommes fin prêts à traduire cela en code dans `linear_system.py`."
+   ]
   }
  ],
  "metadata": {
