--- a/pyheatmy/research/adim_2025_bis.ipynb
+++ b/pyheatmy/research/adim_2025_bis.ipynb
@@ -174,94 +174,77 @@
     }
    },
    "source": [
-    "## 2. Discrétisation de l'équation de la température ($\\tilde{\\theta}$)\n",
+    "## 2. Discrétisation de l'équation de la température (Schéma de Crank-Nicolson Général)\n",
     "\n",
-    "La méthode de discrétisation est identique à la précédente. La principale différence réside dans la présence d'un terme d'advection qui couple la température au gradient de charge hydraulique.\n",
+    "Nous appliquons la même méthode de discrétisation que pour la charge hydraulique, en incluant cette fois le terme d'advection.\n",
     "\n",
     "### 2.1. Rappel de l'équation adimensionnelle\n",
     "\n",
-    "L'équation à résoudre est la suivante :\n",
     "$$\n",
     "\\beta \\cdot \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{t}} = \\kappa \\cdot \\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}} \\cdot \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}} + \\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2}\n",
     "$$\n",
     "\n",
-    "### 2.2. Approximation des dérivées\n",
+    "### 2.2. Application du schéma de Crank-Nicolson\n",
     "\n",
-    "Nous utilisons les mêmes approximations par différences finies que précédemment, en ajoutant celle de la dérivée première pour la température :\n",
+    "Nous appliquons la pondération $\\alpha$ (implicite) et $(1-\\alpha)$ (explicite) à **tous les termes spatiaux** (advection et diffusion).\n",
     "\n",
-    "- **Dérivée temporelle (ordre 1) :**\n",
-    "  $$\n",
-    "  \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{t}} \\approx \\frac{\\tilde{\\theta}_k^{j+1} - \\tilde{\\theta}_k^j}{\\Delta\\tilde{t}}\n",
-    "  $$\n",
-    "- **Dérivée spatiale (ordre 1, centrée) :**\n",
-    "  $$\n",
-    "  \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}} \\approx \\frac{\\tilde{\\theta}_{k+1} - \\tilde{\\theta}_{k-1}}{2\\Delta\\tilde{z}}\n",
-    "  $$\n",
-    "- **Dérivée spatiale (ordre 2, centrée) :**\n",
-    "  $$\n",
-    "  \\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2} \\approx \\frac{\\tilde{\\theta}_{k+1} - 2\\tilde{\\theta}_k + \\tilde{\\theta}_{k-1}}{(\\Delta\\tilde{z})^2}\n",
-    "  $$\n",
+    "Le gradient de charge $G_k^j = (\\partial \\tilde{H} / \\partial \\tilde{z})_k^j$ est calculé à partir du profil de charge $\\vec{\\tilde{H}}$ au temps **connu** $j$. C'est une pratique courante pour conserver un système linéaire en $\\tilde{\\theta}$, et c'est ainsi que `pyheatmy` fonctionne (`nablaH[:, j]`).\n",
     "\n",
-    "Le terme de gradient de charge, $\\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}}$, est considéré comme **connu**. En effet, dans le schéma de résolution, on calcule d'abord $\\vec{\\tilde{H}}^{j+1}$ sur tout le domaine, puis on s'en sert pour calculer $\\vec{\\tilde{\\theta}}^{j+1}$. Nous noterons ce gradient connu : $G_k^{j+1} = \\left(\\frac{\\partial \\tilde{H}}{\\partial \\tilde{z}}\\right)_k^{j+1}$.\n",
-    "\n",
-    "### 2.3. Schéma implicite et réorganisation matricielle\n",
-    "\n",
-    "En appliquant un schéma totalement implicite ($\\alpha=1$, comme dans `pyheatmy`), tous les termes spatiaux sont évalués au temps futur $j+1$.\n",
-    "\n",
-    "L'équation discrétisée complète est :\n",
+    "L'équation discrétisée complète s'écrit donc :\n",
     "$$\n",
-    "\\beta_k \\frac{\\tilde{\\theta}_k^{j+1} - \\tilde{\\theta}_k^j}{\\Delta\\tilde{t}} = \\kappa_k \\cdot G_k^{j+1} \\cdot \\left( \\frac{\\tilde{\\theta}_{k+1}^{j+1} - \\tilde{\\theta}_{k-1}^{j+1}}{2\\Delta\\tilde{z}} \\right) + \\left( \\frac{\\tilde{\\theta}_{k+1}^{j+1} - 2\\tilde{\\theta}_k^{j+1} + \\tilde{\\theta}_{k-1}^{j+1}}{(\\Delta\\tilde{z})^2} \\right)\n",
+    "\\beta_k \\frac{\\tilde{\\theta}_k^{j+1} - \\tilde{\\theta}_k^j}{\\Delta\\tilde{t}} = \\alpha \\left[ \\left(\\kappa G \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}}\\right)_{k}^{j+1} + \\left(\\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2}\\right)_{k}^{j+1} \\right] + (1-\\alpha) \\left[ \\left(\\kappa G \\frac{\\partial \\tilde{\\theta}}{\\partial \\tilde{z}}\\right)_{k}^{j} + \\left(\\frac{\\partial^2 \\tilde{\\theta}}{\\partial \\tilde{z}^2}\\right)_{k}^{j} \\right]\n",
     "$$\n",
     "\n",
-    "Nous regroupons à nouveau les termes inconnus ($\\tilde{\\theta}^{j+1}$) à gauche et les termes connus ($\\tilde{\\theta}^{j}$) à droite.\n",
+    "### 2.3. Réorganisation en système matriciel\n",
     "\n",
-    "**Termes à gauche (inconnus en $j+1$) :**\n",
-    "$$\n",
-    "\\underbrace{\\left(-\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k-1} \\tilde{\\theta}_{k-1}^{j+1} + \\underbrace{\\left(\\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k} \\tilde{\\theta}_{k}^{j+1} + \\underbrace{\\left(\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\\right)}_{\\text{coeff pour } k+1} \\tilde{\\theta}_{k+1}^{j+1}\n",
-    "$$\n",
+    "En regroupant les termes en $j+1$ à gauche et les termes en $j$ à droite, nous obtenons :\n",
     "\n",
-    "**Termes à droite (connus en $j$) :**\n",
+    "**Termes à gauche (pour la matrice A) :**\n",
     "$$\n",
-    "\\frac{\\beta_k}{\\Delta\\tilde{t}} \\tilde{\\theta}_{k}^{j}\n",
+    "\\left(-\\frac{\\alpha}{(\\Delta\\tilde{z})^2} + \\frac{\\alpha \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\\right) \\tilde{\\theta}_{k-1}^{j+1} + \\left(\\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2\\alpha}{(\\Delta\\tilde{z})^2}\\right) \\tilde{\\theta}_{k}^{j+1} + \\left(-\\frac{\\alpha}{(\\Delta\\tilde{z})^2} - \\frac{\\alpha \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\\right) \\tilde{\\theta}_{k+1}^{j+1}\n",
     "$$\n",
     "\n",
-    "On en déduit les coefficients de la matrice $A_{\\tilde{\\theta}}$. La matrice $B_{\\tilde{\\theta}}$ est cette fois-ci simplement une matrice diagonale.\n",
+    "**Termes à droite (pour la matrice B et le vecteur C) :**\n",
+    "$$\n",
+    "\\left(\\frac{1-\\alpha}{(\\Delta\\tilde{z})^2} - \\frac{(1-\\alpha) \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\\right) \\tilde{\\theta}_{k-1}^{j} + \\left(\\frac{\\beta_k}{\\Delta\\tilde{t}} - \\frac{2(1-\\alpha)}{(\\Delta\\tilde{z})^2}\\right) \\tilde{\\theta}_{k}^{j} + \\left(\\frac{1-\\alpha}{(\\Delta\\tilde{z})^2} + \\frac{(1-\\alpha) \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\\right) \\tilde{\\theta}_{k+1}^{j}\n",
+    "$$\n",
+    "\n",
+    "On en déduit les coefficients des matrices tridiagonales $A_{\\tilde{\\theta}}$ et $B_{\\tilde{\\theta}}$.\n",
     "\n",
     "#### Coefficients de la matrice A (implicite, associée à $\\vec{\\tilde{\\theta}}^{j+1}$)\n",
     "- **Diagonale principale ($A_{k,k}$):**\n",
     "  $$\n",
-    "  \\text{diag}(A)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2}{(\\Delta\\tilde{z})^2}\n",
+    "  \\text{diag}(A)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}} + \\frac{2\\alpha}{(\\Delta\\tilde{z})^2}\n",
     "  $$\n",
     "- **Diagonale inférieure ($A_{k,k-1}$):**\n",
     "  $$\n",
-    "  \\text{sub}(A)_k = -\\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\n",
+    "  \\text{sub}(A)_k = -\\frac{\\alpha}{(\\Delta\\tilde{z})^2} + \\frac{\\alpha \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\n",
     "  $$\n",
     "- **Diagonale supérieure ($A_{k,k+1}$):**\n",
     "  $$\n",
-    "  \\text{sup}(A)_k = \\frac{\\kappa_k G_k^{j+1}}{2\\Delta\\tilde{z}} - \\frac{1}{(\\Delta\\tilde{z})^2}\n",
+    "  \\text{sup}(A)_k = -\\frac{\\alpha}{(\\Delta\\tilde{z})^2} - \\frac{\\alpha \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\n",
     "  $$\n",
-    "\n",
-    "**Note importante :** À cause du terme d'advection, la diagonale inférieure et la diagonale supérieure ne sont pas égales. La matrice $A_{\\tilde{\\theta}}$ est donc **asymétrique**, contrairement à la matrice $A_{\\tilde{H}}$ de la diffusion pure.\n",
     "\n",
     "#### Coefficients de la matrice B (explicite, associée à $\\vec{\\tilde{\\theta}}^{j}$)\n",
     "- **Diagonale principale ($B_{k,k}$):**\n",
     "  $$\n",
-    "  \\text{diag}(B)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}}\n",
+    "  \\text{diag}(B)_k = \\frac{\\beta_k}{\\Delta\\tilde{t}} - \\frac{2(1-\\alpha)}{(\\Delta\\tilde{z})^2}\n",
     "  $$\n",
-    "- **Diagonales inférieure et supérieure :** $0$\n",
-    "<br></br>\n",
-    "<br></br>\n",
-    "\n",
-    "---\n",
-    "\n",
-    "<br></br>\n",
-    "\n",
-    "## 3. Conclusion de l'analyse\n",
-    "\n",
-    "Nous avons maintenant le \"plan de montage\" théorique complet pour les matrices des deux équations. Nous savons exactement quels coefficients placer sur les trois diagonales principales de nos matrices A et B pour chaque problème.\n",
-    "\n",
-    "Nous sommes fin prêts à traduire cela en code dans `linear_system.py`."
+    "- **Diagonale inférieure ($B_{k,k-1}$):**\n",
+    "  $$\n",
+    "  \\text{sub}(B)_k = \\frac{1-\\alpha}{(\\Delta\\tilde{z})^2} - \\frac{(1-\\alpha) \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\n",
+    "  $$\n",
+    "- **Diagonale supérieure ($B_{k,k+1}$):**\n",
+    "  $$\n",
+    "  \\text{sup}(B)_k = \\frac{1-\\alpha}{(\\Delta\\tilde{z})^2} + \\frac{(1-\\alpha) \\kappa_k G_k^{j}}{2\\Delta\\tilde{z}}\n",
+    "  $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a937e3",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
