Script de génération de consigne AtmoCONTROL (fix)

--- a/hardware/sensors/pressure/AtmoCONTROL.ipynb
+++ b/hardware/sensors/pressure/AtmoCONTROL.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "1ef62b58",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "id": "2f50e21c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def piecewise_approximation(t_points, t):\n",
+    "def piecewise_approximation(f, t_points, t):\n",
     "    \"\"\"\n",
     "    Compute the piecewise linear approximation at t,\n",
     "    using the segments defined by t_points.\n",
@@ -49,20 +49,20 @@
     "\n",
     "    return y0 + (y1 - y0) * (t - t0) / (t1 - t0)\n",
     "\n",
-    "def total_error(t_points, t_samples):\n",
-    "    \"\"\"\n",
-    "    Compute the total squared error between the original function\n",
-    "    and the piecewise approximation at t_samples.\n",
-    "    \"\"\"\n",
-    "    y_approx = piecewise_approximation(t_points, t_samples)\n",
-    "    y_true = f(t_samples)\n",
-    "    return np.sum((y_approx - y_true)**2)\n",
-    "\n",
     "def optimize_t(f, duration, N):\n",
     "    # Initial guess\n",
     "    t0 = np.linspace(0, duration, N)\n",
     "    # Sample points for error calculation (fine grid)\n",
     "    t_samples = np.linspace(0, duration, 1000)\n",
+    "\n",
+    "    def total_error(t_points, t_samples):\n",
+    "        \"\"\"\n",
+    "        Compute the total squared error between the original function\n",
+    "        and the piecewise approximation at t_samples.\n",
+    "        \"\"\"\n",
+    "        y_approx = piecewise_approximation(f, t_points, t_samples)\n",
+    "        y_true = f(t_samples)\n",
+    "        return np.sum((y_approx - y_true)**2)\n",
     "\n",
     "    result = minimize(\n",
     "        total_error,\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "id": "9e1efbb9",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "id": "5dee71d4",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
     "# PLOT\n",
     "t_plot = np.linspace(0, duration, 1000)\n",
     "y_plot = f(t_plot)\n",
-    "y_approx_plot = piecewise_approximation(t_opt, t_plot)\n",
+    "y_approx_plot = piecewise_approximation(f, t_opt, t_plot)\n",
     "\n",
     "plt.plot(t_plot / 3600, y_plot, label='Signal d\\'entrée')\n",
     "plt.plot(t_opt / 3600, np.round(f(t_opt)), '--', label='Piecewise approximation')\n",
