--- a/pyheatmy/demoInversion.ipynb
+++ b/pyheatmy/demoInversion.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'research/synthetic_cases_generator/demo_genData.ipynb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     43\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mErreur lors de l\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexécution du notebook : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 45\u001b[0m \u001b[43mrun_notebook\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_demoGenData\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAffichage temporaire\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m, in \u001b[0;36mrun_notebook\u001b[0;34m(notebook_path)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrun_notebook\u001b[39m(notebook_path):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# Charger le notebook\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnotebook_path\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     11\u001b[0m         notebook \u001b[38;5;241m=\u001b[39m nbformat\u001b[38;5;241m.\u001b[39mread(f, as_version\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# Configurer l'ExecutePreprocessor pour exécuter toutes les cellules\u001b[39;00m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.12/lib/python3.10/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'research/synthetic_cases_generator/demo_genData.ipynb'"
+     ]
+    }
+   ],
    "source": [
     "import nbformat\n",
     "from nbconvert.preprocessors import ExecutePreprocessor\n",
@@ -279,7 +293,7 @@
     "    \"Prior_n\": ((.01, .25), .01),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((1e-9, 1e-5), 1e-10),\n",
+    "    \"Prior_q_s\": ((1e-9, 1e-5), 1e-10),\n",
     "}\n",
     "\n",
     "Layer_homogenous = {\n",
@@ -289,7 +303,7 @@
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 1e-5\n",
+    "    \"q_s\": 1e-5\n",
     "}\n",
     "\n",
     "Layer_homogenous = Layer.from_dict(Layer_homogenous)\n",
@@ -319,12 +333,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "q_samples = col.get_all_params()[0][::, 4]\n",
+    "q_s_samples = col.get_all_params()[0][::, 4]\n",
     "\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(4, 5)\n",
-    "ax.hist(q_samples, bins=10, range = (1e-6, 1e-5)) \n",
+    "ax.hist(q_s_samples, bins=10, range = (1e-6, 1e-5)) \n",
     "ax.axvline(x=Couche[\"q\"], color='r', linestyle='--', label='Valeur réelle de q')\n",
     "ax.legend()\n",
     "ax.set_title(\"Distribution de q\")\n",
@@ -352,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Paramètres réels :', 'moinslog10IntrinK =', print(Couche[\"moinslog10IntrinK\"]), ', n =', Couche[\"n\"], ', lambda_s =', Couche[\"lambda_s\"], ', rhos_cs =',Couche[\"rhos_cs\"], ', q =',Couche[\"q\"]) # valeurs importées du notebook demo_genData.ipynb\n",
+    "print('Paramètres réels :', 'moinslog10IntrinK =', print(Couche[\"moinslog10IntrinK\"]), ', n =', Couche[\"n\"], ', lambda_s =', Couche[\"lambda_s\"], ', rhos_cs =',Couche[\"rhos_cs\"], ', q_s =',Couche[\"q_s\"]) # valeurs importées du notebook demo_genData.ipynb\n",
     "print(bestLayers)\n",
     "#print('Paramètres inversés :', str(bestLayers[0])[37:-1]) # valeurs calculées par le modèle # mis en commentaire car la fonction get_all_params() ne fonctionne pas"
    ]
@@ -360,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "3.10.12",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
