Documentation and sensor calibration

--- a/hardware/docs/README.ipynb
+++ b/hardware/docs/README.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  ![logo](Figures/logo_MOLONARI_smll.png)  Hardware Programming\n",
+    "# Hardware Programming\n",
     "\n",
     "This project focuses on the Molonari system, an environmental monitoring solution that integrates temperature and pressure sensors, data storage, and transmission via LoRa. Key components include the Adjust RTC for clock calibration, Relay/Relay_LoraWan for communication, and the Sensor module for data collection, storage in CSV format, and transmission. The system is designed for low power consumption to ensure efficient long-term operation. Sensor_demo serves as a simplified version for testing and presentation, while earlier code contributions in Archive_before form the foundational work for the project.\n"
    ]
