--- a/hardware/sensors/calibration/AtmoCONTROL_command_generation.ipynb
+++ b/hardware/sensors/calibration/AtmoCONTROL_command_generation.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# Génération d'une consigne en température pour la chambre thermostatique\n",
     "\n",
-    "Le logiciel AtmoCONTROL ne permet de consigner la température de la chambre thermostatique qu'avec des rampes affines. Ce script Python a pour objectif de générer des consignes (en rampes) approximant une consigne plus complexe, par exemple sinusoïdale."
+    "(MOLONARI 2025)\n",
+    "\n",
+    "Le logiciel AtmoCONTROL ne permet de consigner la température de la chambre thermostatique qu'avec des rampes affines dont les ordonnées sont des nombres entiers. Ce script Python a pour objectif de générer des consignes (en rampes) approximant une consigne plus complexe, par exemple sinusoïdale."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "1ef62b58",
    "metadata": {},
    "outputs": [],
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2f50e21c",
    "metadata": {},
    "outputs": [],
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "9e1efbb9",
    "metadata": {},
    "outputs": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "5dee71d4",
    "metadata": {},
    "outputs": [
