--- a/freq_analysis/notebook_demo_frequentiel.ipynb
+++ b/freq_analysis/notebook_demo_frequentiel.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "07abc44d",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "<frequency_last_v.frequency_analysis at 0x15f053c80>"
+       "<pyheatmy.frequency.frequency_analysis at 0x15ea47f50>"
       ]
      },
      "execution_count": 7,
@@ -370,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "<frequency_last_v.frequency_analysis at 0x15f053c80>"
+       "<pyheatmy.frequency.frequency_analysis at 0x15ea47f50>"
       ]
      },
      "execution_count": 8,
@@ -422,7 +422,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/noedaniel/Desktop/Freq_Molonari/MOLONARI1D/pyheatmy/frequency_last_v.py:536: RuntimeWarning: divide by zero encountered in divide\n",
+      "/Users/noedaniel/Desktop/MOLONARI/MOLONARI1D/pyheatmy/pyheatmy/frequency.py:537: RuntimeWarning: divide by zero encountered in divide\n",
       "  plt.plot(1.0 / (freqs * 86400.0), amp, label=f'Sensor at depth {depths[i]} m')\n"
      ]
     },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "80699280",
    "metadata": {},
    "outputs": [
