--- a/freq_analysis/notebook_demo_frequentiel.ipynb
+++ b/freq_analysis/notebook_demo_frequentiel.ipynb
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyheatmy.frequency.frequency_analysis at 0x15ea47f50>"
+       "<pyheatmy.frequency.frequency_analysis at 0x14e8727e0>"
       ]
      },
      "execution_count": 7,
@@ -370,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyheatmy.frequency.frequency_analysis at 0x15ea47f50>"
+       "<pyheatmy.frequency.frequency_analysis at 0x14e8727e0>"
       ]
      },
      "execution_count": 8,
@@ -422,7 +422,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/noedaniel/Desktop/MOLONARI/MOLONARI1D/pyheatmy/pyheatmy/frequency.py:537: RuntimeWarning: divide by zero encountered in divide\n",
+      "/Users/noedaniel/Desktop/MOLONARI/MOLONARI1D/pyheatmy/pyheatmy/frequency.py:441: RuntimeWarning: divide by zero encountered in divide\n",
       "  plt.plot(1.0 / (freqs * 86400.0), amp, label=f'Sensor at depth {depths[i]} m')\n"
      ]
     },
@@ -463,8 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Default 1D analysis has been selected. \n",
-      " This model will not deal with possible 2D analysis.\n",
+      "This deals only with 1D attenuation (no lateral flow).\n",
       "Detected depths: [0.  0.1 0.2 0.3]\n",
       "Amplitudes at dominant periods for each signal computed.\n",
       "Period 1.00 days: Amplitudes = [0.50056115 0.19003435 0.06971945 0.02739393]\n"
@@ -512,7 +511,7 @@
     }
    ],
    "source": [
-    "a_est, a_R2 = fa.estimate_a(allow2D=False, draw=True)     # lit dates/signals/depths/Pd depuis le state\n",
+    "a_est, a_R2 = fa.estimate_a(draw=True)     # lit dates/signals/depths/Pd depuis le state\n",
     "b_est, b_R2 = fa.estimate_b(draw=True)                    # idem\n",
     "kappa_e, v_t = fa.perform_inversion(verbose=True)         # lit a,b,Pd du state"
    ]
@@ -542,9 +541,16 @@
    "source": [
     "a_expected, b_expected = fa.phys_to_a_b()\n",
     "for p, a, b in zip(Pd, a_expected, b_expected):\n",
-    "    print(f\"Period {p:.2f} days: expected a = {a} 1/m, b = {b} 1/m\")\n",
-    "    "
+    "    print(f\"Period {p:.2f} days: expected a = {a} 1/m, b = {b} 1/m\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9a83629",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
