modify demo gen data to have the proper syntax with generating signals.

--- a/pyheatmy/demo_genData.ipynb
+++ b/pyheatmy/demo_genData.ipynb
@@ -24,9 +24,7 @@
     "# démo time_series\n",
     "from pyheatmy import *\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "\n"
+    "import numpy as np"
    ]
   },
   {
@@ -90,6 +88,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As of 2025, the syntax to create the signals has changed. In fact, now you can create multiperiodic signals. \n",
+    "- Say you want to create a simple signal $y(t) = A + B\\sin(2\\pi t / P + \\phi)$, then you would use : `liste_param_T_riv = [[A], [B, P, phi]]`.\n",
+    "- Say you want to create a multiperiodic signal : $y(t) = A + B\\sin(2\\pi t / P_1 + \\phi_1) + C\\sin(2\\pi t / P_2 + \\phi_2)$, then you would use : `liste_param_T_riv = [[A], [B, P1, phi1], [C, P2, phi2]]`.\n",
+    "\n",
+    "The syntax is :\n",
+    "```python\n",
+    "liste_param_T_riv = [[offset], [ampl1, period1, phase1], ..., [amplN, periodN, phaseN]]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -97,13 +109,18 @@
    "source": [
     "\"\"\"Instanciation de l'objet Time_series\"\"\"\n",
     "# un dictionnaire qui facilite le paramétrage avec des variables globales définies plus haut\n",
+    "\n",
+    "liste_param_dH = [[dH_offset], [dH_amp, P_dh, 0]]\n",
+    "liste_param_T_riv = [[T_riv_offset], [T_riv_amp, P_T_riv, 0]]\n",
+    "liste_param_T_aq = [[T_aq_offset], [T_aq_amp, P_T_aq, 0]]\n",
+    "\n",
     "time_series_dict_user1 = {\n",
     "    \"offset\":.0,\n",
     "    \"depth_sensors\":depth_sensors,\n",
     "\t\"param_time_dates\": [t_debut, t_fin, dt], \n",
-    "    \"param_dH_signal\": [dH_amp, P_dh, dH_offset], #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
-    "\t\"param_T_riv_signal\": [T_riv_amp, P_T_riv, T_riv_offset],\n",
-    "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
+    "    \"param_dH_signal\": liste_param_dH, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "\t\"param_T_riv_signal\": liste_param_T_riv,\n",
+    "    \"param_T_aq_signal\": liste_param_T_aq,\n",
     "    \"sigma_meas_P\": sigma_meas_P,\n",
     "    \"sigma_meas_T\": sigma_meas_T, #float\n",
     "}\n",
@@ -425,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "molonari",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.11"
   },
   "orig_nbformat": 4
  },
