updated documentation in genData

--- a/pyheatmy/demo_genData.ipynb
+++ b/pyheatmy/demo_genData.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Generating synthetic data sets of a river bed column forced by monoperiodic river and aquifer temperature signals\n",
     "\n",
-    "2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
+    "> 2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
+    "\n",
+    "**This is the adapted 2025 version :** now you can generate multiperiodic signals.\n",
     "\n",
     "The object of this demo is to present a class responsible for generating a simulation of pressure and temperature sensor data in cases where data from the CAPTEUR project is not available. Based on the `synthetic_MOLONARI` class in `synthetic_MOLONARI.py`.\n",
     "\n",
