Commentaires dans demo_prediction

--- a/pyheatmy/demo_prediction_2D.ipynb
+++ b/pyheatmy/demo_prediction_2D.ipynb
@@ -27,6 +27,8 @@
     "from datetime import datetime, timedelta\n",
     "import os, csv\n",
     "import pandas as pd\n",
+    "from sklearn.metrics import r2_score\n",
+    "from scipy.stats import chi2\n",
     "\n",
     "from IPython.display import display, Markdown\n",
     "from frequency_updated import frequentiel_analysis\n"
@@ -44,12 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "db95d590",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_fa(q):\n",
+    "    \"\"\"\n",
+    "    Génère une analyse fréquentielle synthétique (Fourier) pour un profil\n",
+    "    thermique d’écoulement souterrain, en fonction du débit q.\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    q : float\n",
+    "        Débit de Darcy (m/s), représentant le flux traversant la couche poreuse.\n",
+    "\n",
+    "    Retourne\n",
+    "    --------\n",
+    "    depths : np.ndarray\n",
+    "        Profondeurs des capteurs thermiques (m).\n",
+    "    fa : frequentiel_analysis\n",
+    "        Objet contenant les résultats de l’analyse fréquentielle.\n",
+    "    \"\"\"\n",
+    "\n",
     "    Zbottom = 0.4  # \n",
     "    depth_sensors = [0.1, 0.2, 0.3, 0.4]\n",
     "\n",
@@ -111,8 +130,8 @@
     "    dominant_freqs = dominant_freqs[meta['accepted_mask']]\n",
     "    dominant_amps = dominant_amps[meta['accepted_mask']]\n",
     "\n",
-    "    a_est, a_R2 = fa.estimate_a(dates, signals, depths, dominant_periods_days, draw=True)\n",
-    "    b_est, b_R2 = fa.estimate_b(dates, signals, depths, dominant_periods_days, draw=True)\n",
+    "    # a_est, a_R2 = fa.estimate_a(dates, signals, depths, dominant_periods_days, draw=True)\n",
+    "    # b_est, b_R2 = fa.estimate_b(dates, signals, depths, dominant_periods_days, draw=True)\n",
     "    #On utilise ces méthodes pour que fa ait accès à fa._AMPL_AT_PEAKS_, qui est définit uniquement lorsqu'on utilise fa.estimate_a\n",
     "    return depths, fa"
    ]
@@ -124,7 +143,7 @@
    "source": [
     "On définit ici les 2 modèles, LRT et AICC.\n",
     "\n",
-    "Elles sont présentées dans le papier de Moonz. Vous pouvez aller voir directement sur le PDF."
+    "Elles sont présentées dans le papier de Munz. Vous pouvez aller voir directement sur le PDF."
    ]
   },
   {
@@ -134,15 +153,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import r2_score\n",
-    "from scipy.stats import chi2\n",
-    "\n",
     "def rss_score(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Calcule la somme des carrés des résidus (RSS - Residual Sum of Squares).\n",
+    "    \"\"\"\n",
     "    return np.sum((y_true - y_pred)**2)\n",
     "\n",
     "\n",
     "def regression_poly(reg, z_values, deg, show_plot=False, coeff_value=False):\n",
     "    #fft puis ln amplitude et on a les 4 points dans le tableau reg\n",
+    "    \"\"\"\n",
+    "    Effectue une régression polynomiale des amplitudes FFT en fonction de la profondeur.\n",
+    "\n",
+    "    Cette fonction ajuste un polynôme de degré `deg` sur les valeurs `reg`\n",
+    "    (généralement le log des amplitudes FFT) en fonction des profondeurs `z_values`.\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    reg : array-like\n",
+    "        Données à ajuster.\n",
+    "    z_values : array-like\n",
+    "        Profondeurs correspondantes.\n",
+    "    deg : int\n",
+    "        Degré du polynôme à ajuster (1 = linéaire, 2 = quadratique).\n",
+    "    show_plot : bool, optionnel\n",
+    "        Si True, affiche le graphique des points et du modèle ajusté.\n",
+    "    coeff_value : bool, optionnel\n",
+    "        Si True, renvoie également les coefficients du polynôme.\n",
+    "\n",
+    "    Retourne\n",
+    "    --------\n",
+    "    tuple\n",
+    "        Si coeff_value=False → (r2, rss)\n",
+    "        Si coeff_value=True → (coeffs, r2, rss)\n",
+    "        \n",
+    "        - coeffs : coefficients du polynôme ajusté.\n",
+    "        - r2 : coefficient de détermination (R²).\n",
+    "        - rss : somme des carrés des résidus.\n",
+    "    \"\"\"\n",
     "    coeffs = np.polyfit(z_values, reg, deg)\n",
     "    p = np.poly1d(coeffs)\n",
     "\n",
@@ -165,6 +213,27 @@
     "\n",
     "\n",
     "def critere_AICC(reg, z_values, t_sigma, show = False):\n",
+    "    \"\"\"\n",
+    "    Applique le critère d'information d'Akaike corrigé (AICc)\n",
+    "    pour comparer un modèle linéaire (1D) et un modèle non linéaire (2D).\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    reg : array-like\n",
+    "        Données à ajuster.\n",
+    "    z_values : array-like\n",
+    "        Profondeurs associées (m).\n",
+    "    t_sigma : float\n",
+    "        Écart-type estimé des résidus.\n",
+    "    show : bool, optionnel\n",
+    "        Si True, affiche un message expliquant le modèle préféré.\n",
+    "\n",
+    "    Retourne\n",
+    "    --------\n",
+    "    str\n",
+    "        \"1D\" si le modèle linéaire (degré 1) est préféré,\n",
+    "        \"2D\" si le modèle non linéaire (degré 2) est préféré.\n",
+    "    \"\"\"\n",
     "    vraisemblance = []\n",
     "    for deg in range(1, 3):\n",
     "        _, rss = regression_poly(reg, z_values, deg)\n",
@@ -191,6 +260,26 @@
     "\n",
     "\n",
     "def critere_LRT(reg, z_values, show = False):\n",
+    "    \"\"\"\n",
+    "    Applique le test du rapport de vraisemblance (LRT - Likelihood Ratio Test)\n",
+    "    pour comparer un modèle linéaire (1D) et un modèle non linéaire (2D).\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    reg : array-like\n",
+    "        Données à ajuster (souvent ln(amplitude) issue d’une FFT).\n",
+    "    z_values : array-like\n",
+    "        Profondeurs correspondantes (m).\n",
+    "    show : bool, optionnel\n",
+    "        Si True, affiche un message expliquant le modèle préféré.\n",
+    "\n",
+    "    Retourne\n",
+    "    --------\n",
+    "    str\n",
+    "        \"1D\" si le modèle linéaire est préféré (p ≥ 0.05),\n",
+    "        \"2D\" si le modèle non linéaire est préféré (p < 0.05).\n",
+    "    \"\"\"\n",
+    "\n",
     "    RSS = []\n",
     "    for deg in range(1, 3):\n",
     "        _, RSS1 = regression_poly(reg, z_values, deg)\n",
@@ -394,12 +483,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "4fb32b38",
    "metadata": {},
    "outputs": [],
    "source": [
     "def critere_maison(reg, z_values, show_reg=False):\n",
+    "    \"\"\"\n",
+    "    Applique un critère maison pour déterminer\n",
+    "    si le modèle thermique est de type 1D (linéaire) ou 2D (non linéaire).\n",
+    "\n",
+    "    Ce critère repose sur la comparaison du coefficient de détermination (R²)\n",
+    "    obtenu par régression polynomiale de degré 1 et de degré 2,\n",
+    "    ainsi que sur l'amplitude du coefficient quadratique.\n",
+    "\n",
+    "    Paramètres\n",
+    "    ----------\n",
+    "    reg : array-like\n",
+    "        Données à ajuster (par ex. le log des amplitudes FFT).\n",
+    "    z_values : array-like\n",
+    "        Profondeurs correspondantes (en mètres).\n",
+    "    show_reg : bool, optionnel\n",
+    "        Si True, affiche les graphiques des régressions linéaire et quadratique.\n",
+    "\n",
+    "    Retourne\n",
+    "    --------\n",
+    "    str\n",
+    "        \"1D\" si le modèle est considéré linéaire,\n",
+    "        \"2D\" si un comportement non linéaire est détecté.\n",
+    "    \"\"\"\n",
     "    r2_list = []\n",
     "    coeffs = []\n",
     "    for deg in range(1, 3):\n",
