--- a/hardware/Pour_2026-2027.md
+++ b/hardware/Pour_2026-2027.md
@@ -18,6 +18,7 @@ Il reste plusieurs choses à implémenter qui ont été réfléchies cette anné
 - L'implémentation d'une gestion de plusieurs cartes avec capteurs depuis un même relai. Il faut pouvoir recevoir depuis le relay les informations des différentes cartes avec leur identifiant propre, et gérer proprement les temps d'arrivée des données.
 - Il y a un problème car la gateway ne peut pas envoyer des données descendantes, elle ne peut que recevoir. Elle devra être changée en un raspbery. Il faudra coder sa reception des données LoRaWAN et le transfert internet. Avec cela, il faudra rajouter la gestion des données descendantes au niveau du relai et du capteur : recevoir le fichier config et remplacer celui déjà mis sur la carte. On pourrait croire que c'est beaucoup de choses pour un petit résultat, et que beaucoup de problèmes peuvent arriver : fichier corrompu rendant impossible la suite des mesures sur le relai ou le capteur, déconnexion entre les deux car fichier modifié sur un seul, perte de la suite des données...
 - Forme d'optimisation des bibliothèques pour les rendre plus claires : petites bibliothèques avec seulement les fonctions de base, ne s'appelant pas les unes les autres. Plus grosses librairies qui les appellent par groupe pour former les blocs important, qu'on appelle ensuite dans les main.
+- L'horloge est décalée de 30 minutes, on ne comprend pas pourquoi
 
 ## 3. Quoi de plus ?
 
