--- a/hardware/Pour_2026-2027.md
+++ b/hardware/Pour_2026-2027.md
@@ -33,7 +33,8 @@ Quelques infos générales :
 
 - C'est bien de savoir coder en c++, sinon il faut regarder les bases sur internet.
 - Cela met du temps de comprendre la structure du code et les codes eux-mêmes, bon courage.
-- Globalement 
 - Nous espérons que ça marchera !
+- C'est très galère d'upload sur les cartes avec un Mac faite le avec un Windows.
+- Quand vous uploadez le programme sur les cartes il faut cliquer 2 fois sur le bouton reset quand la phrase 'Waiting for the new upload port...' apparaît ça réinitialise la carte.
+- Pour savoir si les cartes fonctionnent bien il faut que elles clignotent réguilièrement avec une lumière orange.
 - Les horloges : l'horloge RTC est calée sur l'heure de la dernière COMPILATION donc une fois que le code est uploadé à chaque fois que on appuie sur reset il se remet sur l'heure à laquelle on a compilé le code --> on peut donc avoir plusieurs heures de décalage ! Pour le début il ne faut donc PAS appuyer sur reset une fois que vous avez compilé les codes et il faut compiler les codes en MEME temps. 
-- Pour savoir si les cartes fonctionnent bien il faut 
