--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -708,7 +708,7 @@
     "Couche_1 = {\n",
     "    \"name\": \"Couche 1\",\n",
     "    \"zLow\": Zinterface,\n",
-    "    \"moinslog10IntrinK\": 11,\n",
+    "    \"IntrinK\": 11,\n",
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
@@ -718,7 +718,7 @@
     "Couche_2 = {\n",
     "    \"name\": \"Couche 2\",\n",
     "    \"zLow\": Zbottom,\n",
-    "    \"moinslog10IntrinK\": 11,\n",
+    "    \"IntrinK\": 11,\n",
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
@@ -783,7 +783,7 @@
     "\n",
     "\n",
     "priors_couche_1 = {\n",
-    "    \"Prior_moinslog10IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
+    "    \"Prior_IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
@@ -792,7 +792,7 @@
     "}\n",
     "\n",
     "priors_couche_2 = {\n",
-    "    \"Prior_moinslog10IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
+    "    \"Prior_IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
@@ -920,7 +920,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10.12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -934,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
